# twitch-realtime-handler

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
examples/: faces-detections.py  realtime-face-detection.py  realtime-transcript.py
tests/: test_grabbers.py  test_parent_classes.py
twitchrealtimehandler/: __init__.py  twitchgrabber.py  twitchhandler.py
