[tool.poetry]
name = "twitchrealtimehandler"
version = "0.1.2"
description = "Package to handle real-time frames or audio segments from a twitch stream"
authors = ["adrien. <adrien.nouvellet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
streamlink = "^6.4.2"
numpy = "^1.26.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.examples.dependencies]
face-recognition = "^1.3.0"
fake-useragent = "^1.4.0"
pydub = "^0.25.1"
opencv-python = "^4.8.1.78"
face-recognition-models = "^0.3.0"
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
