[project]
name = "twitchrealtimehandler"
version = "0.1.2"
description = "Package to handle real-time frames or audio segments from a twitch stream"
authors = [{name = "adrien.", email = "adrien.nouvellet@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlink>=6.4.2",
    "numpy>=1.26.2",
]

[project.optional-dependencies]
examples = [
    "face-recognition>=1.3.0",
    "fake-useragent>=1.4.0",
    "pydub>=0.25.1",
    "opencv-python>=4.8.1.78",
    "face-recognition-models>=0.3.0",
    "setuptools>=69.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "B9", "I"]
ignore = [
    "E501", # line too long, handled by ruff format
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
